[gd_scene load_steps=3 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Control" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="."]
margin_left = 462.0
margin_top = 179.235
margin_right = 562.0
margin_bottom = 229.235
text = "host"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join" type="Button" parent="."]
margin_left = 462.0
margin_top = 379.235
margin_right = 562.0
margin_bottom = 429.235
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[node name="AudioStreamRecord" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Record"

[node name="send_recording_timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[connection signal="pressed" from="host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="join" to="." method="_on_join_pressed"]
[connection signal="timeout" from="send_recording_timer" to="." method="_on_send_recording_timer_timeout"]
